# brandbastion-assessment

./: .env.development  .gitignore  .pre-commit-config.yaml  README.md  pyproject.toml
data/: comments.txt
docs/: PROJECT_STRUCTURE.md  challenge.txt
src/: config.py  orchestrator.py  server.py
src/agents/: __init__.py  customer_success_agent.py  data_analyst_agent.py  data_engineer_agent.py  data_scientist_agent.py  social_media_data_analyst_agent.py
src/api/: __init__.py  models.py  routes.py  services.py
src/memory/: __init__.py  conversation_buffer.py  embedder.py  knowledge_base.py
src/tools/: __init__.py
src/tools/file_processor_tool/: __init__.py  file_processor.py
src/workflow/: __init__.py  agent_message.py  check_query_subject_step.py  gather_data_from_context_step.py  generate_report_step.py
ui/agent-ui/: FILE_UPLOAD_README.md  package-lock.json
ui/agent-ui/src/: store.ts
ui/agent-ui/src/api/: chat.ts
ui/agent-ui/src/components/playground/ChatArea/ChatInput/: ChatInput.tsx
ui/agent-ui/src/components/playground/ChatArea/ChatInput/FileUpload/: FileUpload.tsx  index.ts
ui/agent-ui/src/components/ui/icon/: constants.tsx  types.ts
ui/agent-ui/src/hooks/: useUnifiedChatHandler.tsx
